--- a/style.css
+++ b/style.css
@@ -260,6 +260,7 @@ body,
   box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1),
     0px 4px 6px -2px rgba(0, 0, 0, 0.05);
   transition: transform ease-in-out 0.2s;
+  display: none;
 }
 
 .show.toast {
